@@ -5,11 +5,12 @@ frostwire (6.8.8) stable; urgency=high
  * Torrentz2 search fixed
  * MagnetDL search fixed
  * Soundcloud search fixed
+ * EZTV search fixed
  * Fixed archive.org broken downloads
  * Fixes false negative NordLynx/NordVPN detection
  * All deprecation warnings fixed along with some optimizations
 
- -- FrostWire Team <contact@frostwire.com>  Sun, 01 Nov 2020 11:43:00 -0600
+ -- FrostWire Team <contact@frostwire.com>  Mon, 09 Nov 2020 10:14:00 -0600
 
 frostwire (6.8.7) stable; urgency=high
  * New jlibtorrent 1.2.10.0 update
