@@ -1,4 +1,4 @@
-FrostWire 2.2.5 build 663 - NOV/02/2020
+FrostWire 2.2.5 build 666 - NOV/09/2020
  - New: TorrentParadise search source
  - New: GloTorrents search source
  - New: Firebase Crash Analytics support
@@ -6,6 +6,7 @@ FrostWire 2.2.5 build 663 - NOV/02/2020
  - Torrentz2 search fixed
  - MagnetDL search fixed
  - Soundcloud search fixed
+ - EZTV search fixed
  - Fixed archive.org connection dropped/timeout error
  - com.google.android.gms:play-services-ads 19.4.0 -> 19.5.0
  - com.mopub:mopub-sdk-banner:5.12.0 -> 5.14.0
